# mcp-browser-use

./: .cursorrules  .flake8  README.md  pyproject.toml
src/browser_use/: server.py
